# ugolino

./: .gitignore  README.md  main.py  pyproject.toml
ugolino/: __init__.py  aggregator.py  conferences.py  ext.py  feed.py  feeditem.py  seminars.py  utils.py
ugolino/digests/: __init__.py  digest.py  markdown.py  rss.py
ugolino/feeds/: __init__.py  conference_athena.py  conference_cacd.py  conference_heasarc.py  seminar_iauiaa.py  seminar_vast.py
